--- a/server/stylesheet.css
+++ b/server/stylesheet.css
@@ -11,7 +11,20 @@
     color:#fff;
 }
 
-#close-button {
+#msg-overlay {
+    height:25px;
+    width:100%;
+    position:fixed;
+    top:0%;
+    left:0%;
+    background-color:rgba(0, 0, 0, 0.4);
+    display:block;
+    text-align:center;
+    font-size:20px;
+    color:#fff;
+}
+
+#close-msg {
     height:20px;
     margin-right:1px;
     -moz-border-radius:5px;
@@ -67,6 +80,21 @@
 }
 
 #edit-button {
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px;
+    border:1px solid #2f6270;
+    text-align:center;
+    margin-top:10px;
+    margin-left:20px;
+    width:100px;
+    height:30px;
+    font-size:20px;
+    font-weight:bold;
+    color:#fff;
+    background-color:#2f6270;
+}
+
+#close-button {
     -moz-border-radius:5px;
     -webkit-border-radius:5px;
     border:1px solid #2f6270;
