--- a/server/stylesheet.css
+++ b/server/stylesheet.css
@@ -11,25 +11,13 @@
     color:#fff;
 }
 
-#msg-overlay {
-    height:25px;
-    width:100%;
-    position:fixed;
-    top:0%;
-    left:0%;
-    background-color:rgba(0, 0, 0, 0.4);
-    display:block;
-    text-align:center;
-    font-size:20px;
-    color:#fff;
-}
-
-#close-msg {
+#close-button {
+    color:#FFF;
+    background: -moz-linear-gradient(center bottom, #000 0%, #FFF 100%); -webkit-linear-gradient(center bottom, #000 0%, #FFF 100%); 
+    border: 1px solid #777; 
+    border-radius: 3px; -moz-border-radius:10px; -webkit-border-radius:3px; 
     height:20px;
     margin-right:1px;
-    -moz-border-radius:5px;
-    -webkit-border-radius:5px;
-    border:1px solid #2f6270;
     text-align:center;
     width:50px;
     font-size:14px;
@@ -66,10 +54,10 @@
 }
 
 #menu-button {
-    border-radius:2px;
-    -moz-border-radius:2px;
-    -webkit-border-radius:2px;
-    border:5px solid #2f6270;
+    color:#FFF;
+    background: #222; 
+    border:3px solid; 
+    border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px; 
     text-align:center;
     font-size:14px;
     float:left;
@@ -80,9 +68,10 @@
 }
 
 #edit-button {
-    -moz-border-radius:5px;
-    -webkit-border-radius:5px;
-    border:1px solid #2f6270;
+    color:#FFF;
+    background: -moz-linear-gradient(center bottom, #000 0%, #FFF 100%); -webkit-linear-gradient(center bottom, #000 0%, #FFF 100%); 
+    border: 1px solid #777; 
+    border-radius: 3px; -moz-border-radius:10px; -webkit-border-radius:3px;
     text-align:center;
     margin-top:10px;
     margin-left:20px;
@@ -91,20 +80,4 @@
     font-size:20px;
     font-weight:bold;
     color:#fff;
-    background-color:#2f6270;
-}
-
-#close-button {
-    -moz-border-radius:5px;
-    -webkit-border-radius:5px;
-    border:1px solid #2f6270;
-    text-align:center;
-    margin-top:10px;
-    margin-left:20px;
-    width:100px;
-    height:30px;
-    font-size:20px;
-    font-weight:bold;
-    color:#fff;
-    background-color:#2f6270;
 }
