--- a/server/stylesheet.css
+++ b/server/stylesheet.css
@@ -153,6 +153,12 @@
     z-index:2147483645;
 }
 
+.highlightElement {
+    /* color:#fff; */
+    /* background-color:#777; */
+    border-style:dotted;
+}
+
 #blog-filter {
     min-width:200px;max-width:200px;
 }
