--- a/server/stylesheet.css
+++ b/server/stylesheet.css
@@ -156,7 +156,7 @@
 .highlightElement {
     /* color:#fff; */
     /* background-color:#777; */
-    border-style:dotted;
+    border:dotted;
 }
 
 #blog-filter {
