--- a/server/stylesheet.css
+++ b/server/stylesheet.css
@@ -18,6 +18,7 @@
 
 .alipi {
     font-weight:normal;
+    font-size:100%;
 }
 
 #targetoverlay .alipi {
@@ -29,8 +30,8 @@
     position:fixed;
     /* top:0px; */
     clear:both;
-    width:90%;
-    left:5%;
+    width:99%;
+    left:0.5%;
     /* height:30px; */
     /* min-width:500px; */
     text-align:center;
@@ -146,7 +147,7 @@
     position: absolute;
     top: 15%;
     left:2%;
-    min-width:250px;
+    min-width:45%;
     max-width:45%;
     min-height:80%;
     max-height:80%;
@@ -162,7 +163,7 @@
     position:absolute;
     top:15%;
     left:52%;
-    min-width:250px;
+    min-width:45%;
     max-width:45%;
     min-height:80%;
     max-height:80%;
