--- a/server/templates/feeds.html
+++ b/server/templates/feeds.html
@@ -4,7 +4,10 @@
   <script type="text/javascript">
     $.getJSON("http://127.0.0.1:5000/feed", function(data)
     {
+    d = $.makeArray(data);
+    d.reverse();
     str = "";
+    console.log(d[0]);
     $.each(data, function(i, val)
     {
       if(val['about'] != undefined && val['about'] != 'undefined' && val['author'] != 'undefined' )
@@ -15,7 +18,24 @@
   </script>
 </head>
 <body style="text-wrap:normal">
+    @<input type="text" id="t1" name="author" value="author" /> says <input type="text" id="t2" name="about" value="about" />  <input type="text" id="t3" name="xpath" value="xpath" /> is related to <input type="text" id="t4" name="blog" value="blog" /> <input type="text" id="t5" name="bxpath" value="bxpath" /> <input type="submit" id="post" name="alipi" value="Feed" onclick="postForm();" />
 <div id="feeds">
 </div>
+<script type="text/javascript">
+   function postForm()
+  {
+   console.log("here");
+  var arr = {};
+  arr['author'] = $('#t1').val();
+  arr['about'] = $('#t2').val();
+  arr['xpath'] = $('#t3').val();
+  arr['blog'] = $('#t4').val();
+  arr['bxpath'] = $('#t5').val();
+  $.post("http://127.0.0.1:5000/feeds/write", arr, function(data)
+  {
+  alert("Posted");
+  });
+}
+</script>
 </body>
 </html>
